--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html{
+    box-sizing: border-box;
+}
+*,*::before,*::after{
+    box-sizing: inherit;
+
+}
+.search{
+    background-color: #00bfa5;
+    min-height: 200px;
+}
+.content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.wrapper {
+    max-width: 98%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+}
