--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 html{
     box-sizing: border-box;
 }
@@ -32,3 +31,7 @@ html{
 .v-card{
     z-index: 10;
 }
+.v-field__input input{
+  opacity: 0;
+}
+
