--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,29 +8,53 @@ html{
     box-sizing: inherit;
 
 }
+.codes{
+    padding: 3%;
+}
+.main-text{
+    margin: 3%;
+    color: white;
+    background: #4B83C6;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+
+}
 .search{
     min-height: 200px;
 
 }
+
 .wrapper {
-    max-width: 98%;
+    width: 95%;
     margin-left: auto;
     margin-right: auto;
     padding-left: 16px;
     padding-right: 16px;
     margin-top: 2%;
+    margin-bottom: 2%;
+    background: #6fb1cc;
+    border-radius: 5px;
 }
 .ttle-lst{
     padding: 2% 0 2% 0;
+    color: white;
 }
 .v-card{
     z-index: 10;
 }
 .v-toolbar__content{
-    background: skyblue;
+    background: #4B83C6;
     color: white;
 }
 
 .v-navigation-drawer__content{
     color: white;
+}
+
+.info-ttl{
+    color: white;
+    padding: 5% 0 5% 0;
 }
