--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -35,7 +35,7 @@ html{
     padding-right: 16px;
     margin-top: 2%;
     margin-bottom: 2%;
-    background: #6fb1cc;
+    background: #0b82b3;
     border-radius: 5px;
 }
 .ttle-lst{
