--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 html{
     box-sizing: border-box;
 }
@@ -8,13 +9,16 @@ html{
     box-sizing: inherit;
 
 }
+.v-autocomplete .v-field .v-field__input>input{
+    background: inherit;
+}
 .codes{
     padding: 3%;
 }
 .main-text{
-    margin: 3%;
+    margin: 1%;
     color: white;
-    background: #4B83C6;
+    background: #0b82b3;
     width: 95%;
     margin-left: auto;
     margin-right: auto;
@@ -28,6 +32,7 @@ html{
 }
 
 .wrapper {
+    box-shadow: 0 0 7px 1px #393939;
     width: 95%;
     margin-left: auto;
     margin-right: auto;
@@ -46,7 +51,7 @@ html{
     z-index: 10;
 }
 .v-toolbar__content{
-    background: #4B83C6;
+    background: #0d2f58;
     color: white;
 }
 
