--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,17 +5,38 @@
 html {
     box-sizing: border-box;
 }
-
+.v-toolbar-items {
+    height: auto!important;
+}
+.padding {
+    padding: 10px;
+}
+.default-container {
+    padding: 10px;
+    width: 100%!important;
+    margin: 0!important;
+    box-shadow: 0 0 7px 1px var(--main-blue)!important;
+}
+.margin-top {
+    margin-top: 15px!important;
+}
+.margin-bottom{
+    margin-bottom: 15px!important;
+}
+.v-main{
+    padding-left: 40px!important;
+    padding-right: 40px!important;
+}
 :root {
     --trans-blue: #0b82b317;
-    --main-blue: #0b82b3;
+    --main-blue: #0d2f58;
 }
 .blue-bg{
     background-color: var(--main-blue)!important;
 }
+
 *, *::before, *::after {
     box-sizing: inherit;
-
 }
 
 .v-autocomplete .v-field .v-field__input > input {
@@ -29,30 +50,25 @@ html {
 .main-text {
     margin: 1%;
     color: white;
-    background: #0b82b3;
+    background: var(--main-blue)!important;
     width: 95%;
     margin-left: auto;
     margin-right: auto;
     padding-left: 16px;
     padding-right: 16px;
-
 }
 
 .search {
     min-height: 200px;
-
 }
 
 .wrapper {
     box-shadow: 0 0 7px 1px #393939;
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+
     padding-left: 16px;
     padding-right: 16px;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    background: #0b82b3;
+
+    background: var(--main-blue);
     border-radius: 5px;
 }
 
