--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,6 +16,8 @@ html {
     width: 100%!important;
     margin: 0!important;
     box-shadow: 0 0 7px 1px var(--main-blue)!important;
+    border-radius: 5px;
+
 }
 .margin-top {
     margin-top: 15px!important;
@@ -46,7 +48,12 @@ html {
 .codes {
     padding: 3%;
 }
-
+.text-center{
+    text-align: center;
+}
+.bottom-border{
+    border-bottom: 1px solid #c7c7c7;
+}
 .main-text {
     margin: 1%;
     color: white;
